--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Massively by HTML5 UP
-	html5up.net
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Nizanth | Portfolio</title>
@@ -125,6 +120,66 @@
 									<p>This project uses Python and web scraping to track Amazon products and their prices. It automatically sends an email alert when a product’s price drops, helping monitor deals and price changes efficiently.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/NizanthNS/Python---Jupyter---Project/blob/main/Amazon%20Web%20Scraper%20Project.ipynb" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2><a href="https://github.com/NizanthNS/Python---Jupyter---Project/blob/main/API%20Project.ipynb">Crypto — Real-Time API Pull Using Python</a></h2>
+									</header>
+									<a href="https://github.com/NizanthNS/Python---Jupyter---Project/blob/main/API%20Project.ipynb" class="image fit"><img src="images\Crypto — Real-Time API.png" alt="" /></a>
+									<p>This project fetches live cryptocurrency data using a custom API I built. It highlights real-time data handling in Python along with secure and efficient API integration.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/NizanthNS/Python---Jupyter---Project/blob/main/API%20Project.ipynb" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2><a href="https://github.com/NizanthNS/Python---Jupyter---Project/blob/main/Data%20Cleaning%20in%20Pandas.ipynb">Data Cleaning in Pandas</a></h2>
+									</header>
+									<a href="https://github.com/NizanthNS/Python---Jupyter---Project/blob/main/Data%20Cleaning%20in%20Pandas.ipynb" class="image fit"><img src="images\Data Cleaning in Pandas.png" alt="" /></a>
+									<p>This project focuses on cleaning messy datasets using Pandas. It includes handling missing values, fixing inconsistent formats, removing duplicates, and preparing data for accurate analysis and visualization.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/NizanthNS/Python---Jupyter---Project/blob/main/Data%20Cleaning%20in%20Pandas.ipynb" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2><a href="https://github.com/NizanthNS/Python---Jupyter---Project/blob/main/EDA%20in%20Pandas.ipynb">Exploratory Data Analysis in Pandas</a></h2>
+									</header>
+									<a href="https://github.com/NizanthNS/Python---Jupyter---Project/blob/main/EDA%20in%20Pandas.ipynb" class="image fit"><img src="images\Exploratory Data Analysis in Pandas.png" alt="" /></a>
+									<p>This project demonstrates Exploratory Data Analysis (EDA) using Pandas, focusing on data cleaning, summarization, and visualization to uncover patterns, trends, and insights from the dataset.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/NizanthNS/Python---Jupyter---Project/blob/main/EDA%20in%20Pandas.ipynb" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2><a href="https://github.com/NizanthNS/Python---Jupyter---Project/blob/main/Scraping%20Data%20from%20a%20Real%20Website%20%2B%20Pandas.ipynb">Web Scraping and Data Analysis with Pandas</a></h2>
+									</header>
+									<a href="https://github.com/NizanthNS/Python---Jupyter---Project/blob/main/Scraping%20Data%20from%20a%20Real%20Website%20%2B%20Pandas.ipynb" class="image fit"><img src="images\Web Scraping and Data Analysis with Pandas.png" alt="" /></a>
+									<p>This project involves scraping data from a Real website, organizing and displaying it using Pandas, and exporting the cleaned data to CSV and Excel formats for further use.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/NizanthNS/Python---Jupyter---Project/blob/main/Scraping%20Data%20from%20a%20Real%20Website%20%2B%20Pandas.ipynb" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2><a href="https://github.com/NizanthNS/Python---Jupyter---Project/blob/main/BMI%20Calculator.ipynb">BMI Calculator</a></h2>
+									</header>
+									<a href="https://github.com/NizanthNS/Python---Jupyter---Project/blob/main/BMI%20Calculator.ipynb" class="image fit"><img src="images\BMI Calculator.png" alt="" /></a>
+									<p>Python BMI calculator that computes body mass index from height and weight and categorizes health status.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/NizanthNS/Python---Jupyter---Project/blob/main/BMI%20Calculator.ipynb" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2><a href="https://github.com/NizanthNS/Python---Jupyter---Project/blob/main/File%20Sorter.ipynb">File Sorter</a></h2>
+									</header>
+									<a href="https://github.com/NizanthNS/Python---Jupyter---Project/blob/main/File%20Sorter.ipynb" class="image fit"><img src="images\File Sorter.png" alt="" /></a>
+									<p>File Sorter is a Python-based tool that automatically organizes files into folders by type or custom rules, making digital file management fast, easy, and efficient.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/NizanthNS/Python---Jupyter---Project/blob/main/File%20Sorter.ipynb" class="button">View Project</a></li>
 									</ul>
 								</article>
 							</section>
